third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/inline-parity/subtype_args.exp

Diagnostics:
error: expected function type has argument of type `(&mut u64, &mut integer)` but `(&u64, &mut u64)` was provided
   ┌─ tests/checking-lang-v2.2/lambda/inline-parity/subtype_args.move:24:9
   │
24 │         f(&mut 0, &mut 0); // need to further investigate this error
   │         ^^^^^^^^^^^^^^^^^
